Fix bug with list item too short

--- a/static/styles.css
+++ b/static/styles.css
@@ -271,6 +271,10 @@ a {
     height: 50px;    
 }
 
+.child-list .ui-li {
+    height: 50px;
+}
+
 .child-list-item .item-content {
     height: auto !important;
 }
